@@ -8,6 +8,7 @@ Revision history for Perl extension RPi::WiringPi.
           user doesn't have to run the entire script as such
         - removed the ability to use SYS (GPIO_SYS) mode. It was implemented to
           avoid having to be root
+        - moved gpio_layout() from core to Util
 
 2.36.2  2017-01-14
         - change versioning. The X.XX portion represents which version of
